__HEADER__(`Octave News Archive')

<div class="section">
<dl>
<dt>August 24, 2006</dt>
<dd>Version 2.9.8 is now available for ftp.
__MAIL_THREAD__(`maintainers', `2006', `August', `000500')</dd>
<dt>July 28, 2006</dt>
<dd>Version 2.9.7 is now available for ftp.
__MAIL_THREAD__(`maintainers', `2006', `July', `000431')</dd>
<dt>July 27, 2006</dt>
<dd>Fairly complete support for Matlab's MEX interface has been
added to the Octave CVS archive and will be part of the 2.9.7
shapshot.  Please see
__MAIL_THREAD__(`maintainers', `2006', `July', `000424')
for more details.</dd>
<dt>June 29, 2006</dt>
<dd>Please see this
__MAIL_THREAD__(`maintainers', `2006', `June', `000309')
if you are having trouble compiling Octave 2.9.6 with GCC 3.x.  
After applying the patch, you'll need to run autogen.sh and configure
again.  This means you'll need to have a recent version of 
autoconf installed.  Or, you can upgrade to GCC 4.x or you can wait for
2.9.7.  So many options!</dd>
<dt>June 9, 2006</dt>
<dd>Version 2.9.6 is now available for ftp.
__MAIL_THREAD__(`maintainers', `2006', `June', `000281')</dd>
<dt>May 26, 2006</dt>
<dd>Function file cacheing has been improved with hopefully major 
speedups when calling m-file functions.
__MAIL_THREAD__(`maintainers', `2006', `May', `000230')</dd>
<dt>May 21, 2006</dt>
<dd>Octave-forge is being cleaned up by moving core functions into
the main Octave distribution.
__MAIL_THREAD__(`maintainers', `2006', `May', `000195')</dd>
<dt>May 11, 2006</dt>
<dd>Path manipulation was significantly cleaned up.  Now instead of
manipulating the <code>LOADPATH</code> variable, you can use the
<code>addpath</code>, <code>rmpath</code>, and <code>path</code>
functions.
__MAIL_THREAD__(`maintainers', `2006', `May', `000147')</dd>
<dt>May 3, 2006</dt>
<dd>To enable XML reading, mat2cell was developed along 
with significantly more efficient versions of regexp and regexprep.
__MAIL_THREAD__(`maintainers', `2006', `May', `000025')</dd>
<dt>May 2, 2006</dt>