@@ -30,6 +30,14 @@
 
 <div class="section">
 <dl>
+<dt>March , 2007</dt>
+<dd>Version 2.9.10 is now available for ftp.
+<a href="https://www.cae.wisc.edu/pipermail/octave-maintainers/2007-March/002372.html"
+class="mailthread">[Mailing List Thread]</a></dd>
+<dt>October 4, 2006</dt>
+<dd>Version 2.9.9 is now available for ftp.
+<a href="https://www.cae.wisc.edu/pipermail/octave-maintainers/2006-October/000743.html"
+class="mailthread">[Mailing List Thread]</a></dd>
 <dt>August 24, 2006</dt>
 <dd>Version 2.9.8 is now available for ftp.
 <a href="https://www.cae.wisc.edu/pipermail/octave-maintainers/2006-August/000500.html"
